# qr_reader

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: qr_detector.cpp  qr_detector.h
src/io/: image_loader.cpp  image_loader.h  result_writer.cpp  result_writer.h
src/processors/: image_processor.cpp  image_processor.h
src/utils/: logger.cpp  logger.h
